--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -6533,30 +6533,89 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from google.colab import drive\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "from collections import defaultdict\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# อ่านข้อมูลทั้งหมดจากโฟลเดอร์ย่อยใน base_path และเพิ่มคอลัมน์ 'Month'\n",
+        "def read_all_data(base_path):\n",
+        "    all_data = []\n",
+        "    for month in os.listdir(base_path):\n",
+        "        month_path = os.path.join(base_path, month)\n",
+        "        if not os.path.isdir(month_path):\n",
+        "            continue\n",
+        "        for file in os.listdir(month_path):\n",
+        "            if 'stop-and-search' not in file:\n",
+        "                continue\n",
+        "            stopandsearchpath = os.path.join(month_path, file)\n",
+        "            try:\n",
+        "                df = pd.read_csv(stopandsearchpath)\n",
+        "                # เพิ่มคอลัมน์ 'Month' ที่มาจากชื่อโฟลเดอร์\n",
+        "                df['Month'] = month\n",
+        "                all_data.append(df)\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error reading {stopandsearchpath}: {e}\")\n",
+        "    return all_data\n",
+        "\n",
+        "# นับจำนวนคนเชื้อสายเอเชียในแต่ละเดือน\n",
+        "def count_asian_people_by_month(all_dfs):\n",
+        "    if not all_dfs:\n",
+        "        return {}\n",
+        "\n",
+        "    # รวมทุก DataFrame เข้าด้วยกัน\n",
+        "    combined_df = pd.concat(all_dfs, ignore_index=True)\n",
+        "\n",
+        "    # กรองเฉพาะข้อมูลที่มีเชื้อสาย Asian\n",
+        "    asian_df = combined_df[combined_df['Self-defined ethnicity'].str.contains('Asian', na=False)]\n",
+        "\n",
+        "    # Group by 'Month' และนับจำนวน\n",
+        "    asian_counts = asian_df.groupby('Month').size()\n",
+        "\n",
+        "    return asian_counts.to_dict()\n",
+        "\n",
+        "# === Main execution ===\n",
+        "base_path = '/content/drive/MyDrive/Python&DataViz2025'\n",
+        "\n",
+        "# โหลดข้อมูล\n",
+        "dataframes = read_all_data(base_path)\n",
+        "\n",
+        "# คำนวณจำนวนคนเชื้อสายเอเชียในแต่ละเดือน\n",
+        "counts_by_month = count_asian_people_by_month(dataframes)\n",
+        "\n",
+        "# แสดงผล\n",
+        "if counts_by_month:\n",
+        "    most_month = max(counts_by_month, key=counts_by_month.get)\n",
+        "    fewest_month = min(counts_by_month, key=counts_by_month.get)\n",
+        "\n",
+        "    print(f\"เดือนที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด คือเดือน {fewest_month} จำนวน {counts_by_month[fewest_month]} คน\")\n",
+        "    print(f\"เดือนที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด คือเดือน {most_month} จำนวน {counts_by_month[most_month]} คน\")\n",
+        "else:\n",
+        "    print(\"ไม่พบข้อมูลที่เกี่ยวข้องกับผู้มีเชื้อสายเอเชีย\")"
+      ],
       "metadata": {
-        "id": "WCBgD11DWLqq"
+        "id": "WCBgD11DWLqq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e8e3adf1-0f50-4a9d-d105-7aeb28535c79"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "qYUWd-C0WLtw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "CqiC2rX_WLxg"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "เดือนที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia น้อยที่สุด คือเดือน 2025-05 จำนวน 1737 คน\n",
+            "เดือนที่มีจำนวนผู้ถูกเรียกค้นที่เป็นคน Asia มากที่สุด คือเดือน 2025-01 จำนวน 2874 คน\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
