--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1219,7 +1220,7 @@
       "metadata": {
         "id": "Z9TKACC3Vug8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1235,7 +1236,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,7 +1255,7 @@
       "metadata": {
         "id": "HTLAUjeCrvHc"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1281,7 +1282,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1923,7 +1924,7 @@
       "source": [
         "stopandsearch_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2344,7 +2345,7 @@
           "height": 605
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3918,7 +3919,7 @@
           "height": 458
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4028,7 +4029,7 @@
       "source": [
         "stopandsearch_df[stopandsearch_df['Part of a policing operation']==True] #ถ้าอยากนำตารางนี้ไปใช้ ต้องสร้างตัวแปรใหม่มารองรับ"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4623,7 +4624,7 @@
         "id": "Aun6rt5zhU5c",
         "outputId": "72ec34c3-0fe5-4c4d-a2cc-754b64b11fda"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4651,7 +4652,7 @@
         "id": "4JqbRtnrhdf0",
         "outputId": "52a8d8db-ee5b-447b-9b4e-1537f9697dda"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -6032,7 +6033,7 @@
         "id": "yoNwHb6aZVHM",
         "outputId": "3064929d-1a99-4f66-8d16-ed188d013fd9"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6579,7 +6580,7 @@
         "outputId": "3fc2b3c6-2168-4092-d0a9-084d1de42566",
         "id": "22FN0w9GZ-40"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6708,7 +6709,7 @@
         "id": "PQhRIZagkE8k",
         "outputId": "5ca3cb89-5cbe-4b8a-8631-f75a05b886b2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6848,7 +6849,7 @@
         "id": "myWH-bLJaJav",
         "outputId": "f2123850-9bbb-4add-aef5-8fa0bfd8be51"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7006,7 +7007,7 @@
         "id": "mRZtlMqbbswe",
         "outputId": "6a78f0c7-25ed-41e0-ee92-68ef4000c0e9"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7619,7 +7620,7 @@
         "id": "eCo0xwRXlCNY",
         "outputId": "aa2e13ea-f763-4b0d-8525-7a9dfbb22f08"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7970,7 +7971,7 @@
         "id": "wBbJI-AilD-A",
         "outputId": "c11f3520-ee1b-4350-b9cf-826de5f6e7e2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8343,7 +8344,7 @@
       "source": [
         "stopandsearch_df.dropna(subset=['Self-defined ethnicity','Legislation'],inplace=True) #inplace แปลว่าให้มันอัพเดตตาราง"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8358,7 +8359,7 @@
         "id": "IfiCvlQgbtRO",
         "outputId": "481ca3d0-2557-4ccd-8276-ed8088a8ba3f"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8385,7 +8386,7 @@
         "id": "r4msXnk4btXt",
         "outputId": "a26e995d-69da-44db-e3cf-c461d5fe9745"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8615,7 +8616,7 @@
         "id": "f4TD5gPTmhTO",
         "outputId": "8dc31a65-970b-4841-9c16-505bd08bda57"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9201,7 +9202,7 @@
         "id": "lHiOylQUmF94",
         "outputId": "3d96596c-7bb6-4e9d-a3a3-d47a84f1a225"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9916,7 +9917,7 @@
         "id": "Q50js310mqtG",
         "outputId": "fd72833d-ba64-4940-c046-f2022d103623"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10040,7 +10041,7 @@
       "metadata": {
         "id": "_O9gmNyonkY1"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10250,7 +10251,7 @@
           "height": 458
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10369,7 +10370,7 @@
         "id": "FUO5sZ0oqxI2",
         "outputId": "c19292c7-3ea0-444b-e28c-0f6e72dca6af"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10952,7 +10953,7 @@
           "height": 458
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11062,7 +11063,7 @@
           "height": 1000
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11648,7 +11649,7 @@
         "id": "zOAWBbWzt58m",
         "outputId": "1186b475-d2d1-4510-b110-cc825c74a257"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11766,7 +11767,7 @@
         "id": "orP8eM7Jws-Q",
         "outputId": "5debf170-5d73-4c67-be02-65205f356949"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11791,7 +11792,7 @@
       "metadata": {
         "id": "xgi9568BtBhM"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11807,7 +11808,7 @@
         "id": "8cMU-MRvxeeA",
         "outputId": "940aebf1-8a7c-4c06-b349-08fbd1297086"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11936,7 +11937,7 @@
         "id": "BWdbuLKh0ziw",
         "outputId": "c03e197e-7c08-4fb0-bad3-b5bb1c92eef4"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11975,7 +11976,7 @@
         "id": "nkAumbAGySu8",
         "outputId": "94af563a-b833-45fa-deb4-33f462268e85"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12146,7 +12147,7 @@
       "source": [
         "this_data = stopandsearch_df.iloc[:10,:]"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12162,7 +12163,7 @@
         "id": "mDmDVtHP2FW5",
         "outputId": "4d527ba5-9456-421e-a4f7-31c4e777c892"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12763,7 +12764,7 @@
         "id": "utVw-5iy2FY6",
         "outputId": "f5b884fd-8064-4a34-9c18-6b45543b1910"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12956,7 +12957,7 @@
         "id": "k1dVQymR2nmi",
         "outputId": "3939691a-9e77-4ad8-ee04-f307cc011959"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13085,7 +13086,7 @@
         "id": "tNmHlUZx2now",
         "outputId": "c436c0bb-c57e-4aee-edc8-d926246ab906"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13119,7 +13120,7 @@
         "id": "jR3z3GF_23C6",
         "outputId": "afddcbbb-c399-4eae-df66-3253c8f70b32"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13178,7 +13179,7 @@
       "metadata": {
         "id": "AXM6wxSq23IH"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13194,7 +13195,7 @@
         "id": "yPeih_3D2nq_",
         "outputId": "ce1725e1-b965-4cbc-8102-6abe297fac66"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13550,7 +13551,7 @@
       "metadata": {
         "id": "29P71DDW6hxQ"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13561,7 +13562,7 @@
       "metadata": {
         "id": "LojqQFjE6h0e"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
